@@ -1,5 +1,7 @@
 Revision history for IPC::SRLock
 
+          - Switched to private lexical subs
+
 0.24.1    2014-11-10 16:38:26
           - Dropped atomic shm file writes from ::Fcntl. Unecessary
           - Added async option. Blocks for memcached implementation
